apps/deploy.metallb.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: jvminfo
  name: jvminfo
spec:
  containers:
    - image: celeguim/jvminfo:latest
      name: jvminfo
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: jvminfo
  name: jvminfo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    run: jvminfo
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: nginx
  type: LoadBalancer
status:
  loadBalancer: {}
