apps/deploy.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.nginx.example.com
      http:
        paths:
          - path: /jvminfo
            pathType: Prefix
            backend:
              service:
                name: jvminfo
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
